# Spider_XHS

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  RISK_CONTROL.md  api_server.py  comment_gui.py  config.py  custom_search.py  devbox.json  docker-compose.yml  home.py  main.py  mention.py  one.py  package-lock.json  package.json  profile.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  search.py  server.py  test_cookies.py  test_phase1.py  test_search.py  test_search_detailed.py
.claude/: settings.local.json
apis/: pc_apis.py  xhs_creator_apis.py  xhs_creator_login_apis.py  xhs_pc_apis.py  xhs_pc_login_apis.py  xhs_pugongying_apis.py  xhs_qianfan_apis.py
backend/: main.py
config/: __init__.py  base_config.py  config.py  storage_config.py
docs/: DEPLOYMENT.md  NOTES.md  PROJECT_STATUS.md  REQUIREMENTS.md  TESTING.md
frontend/: .cta.json  .gitignore  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
pojo/: note.py  user.py
scripts/: check.sh  classify_courses.py  classify_prof.py  deduplicate_jsonl.py  docker-down.sh  docker-up.sh
server/: __init__.py  account_store.py  main.py  operation_store.py
spider/: spider.py
static/: cookies.txt  info.js  launcher_tmp.js  xhs_a1.js  xhs_a1_other.js  xhs_creator_260411.js  xhs_creator_sign.js  xhs_creator_signature.js  xhs_creator_xs.js  xhs_main_260411.js  xhs_rap.js  xhs_websectiga_env.js  xhs_xray.js  xhs_xray_pack1.js  xhs_xray_pack2.js  xhs_xs_xsc_56.js
test/: home_list_each.py  home_list_info.py  (+4 more)
(+314 files in other folders)
