[project]
name = "spider-xhs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pyexecjs>=1.5.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "retry>=0.9.2",
    "scalar-fastapi>=1.0.3",
]
